# Working_with_2024_4dstem-master

./: .gitignore  Atomic_Potential_Calculator.ipynb  Beam_Currents_2200_TEM_Mode_pA.txt  EELS_InSe_InSe_K_edges.ipynb  EELS_InSe_O_K_edge.ipynb  EELS_analysis_core_loss.ipynb  EELS_analysis_low_loss.ipynb  GaS_Simulation_CudaTest.ipynb  Load_Converted_EELS_Map.ipynb  MS_Pytcho_Moire_thicker.ipynb  Pipreqirements_test.ipynb  README.md  SEM_image_calibration.ipynb  Test_Git_Commands_in_Juyter.ipynb  Testing_GUI.ipynb  olli_4dstem.txt  requirements.txt  stuff_to_Add.txt
2D_Polymer/: TIFF_file_Loader.ipynb
Bulding_to_Package/: InstructionsToSetupPackageStructure.ipynb  pyproject.toml
Bulding_to_Package/src/FunctionPackageOM/: Added_Functions.py  BackgroundFilterFunctions.py  Plot_Style.py  User_Functions.py
Bulding_to_Package/tests/: Test_FilterFunctions.ipynb
Calibration_and_very_useful_things/: Calibrate_Diffraction_Patterns_2200_with_py4dstem.ipynb  Measurement_of_Beam_Current.ipynb  STEM_Dose_Calculation.ipynb  STEM_MAG_List.ipynb  Simulate Diffraction Patterns with py4dstem.ipynb
Data_Conversion/: PED_conversion_TVIPS.ipynb  Procedure_for_converting_raw_data.ipynb  Procedure_for_converting_raw_data_DS2.ipynb  Procedure_for_converting_raw_hdf_recorder.ipynb  Procedure_tvips_to_video_converter.ipynb
GaS/: GaS_Paper_create_Simulation_Copy.ipynb  User_Functions.py  testWidgets.ipynb
InSe_EELs_EDX/: 2024_06_27_InSe_Thickness.ipynb  Al2O3_In2O3_Interface.ipynb  BuildingStructureWithAse.ipynb  FilteringInSeImages.ipynb  InSe_Paper_create_Simulation_Cell.ipynb  (+3 more)
(+50 files in other folders)
